xvimagesink: fix error leak when context creation fails

When context creation fails, error is getting leaked.

https://bugzilla.gnome.org/show_bug.cgi?id=754973